# langgraphics

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  simulate.py  tox.ini
.github/workflows/: automerge.yml  claude.yml  models.yml  publish.yml  tests.yml
examples/: __common__.py  basic_agent.py  deep_agent.py  error_agent.py  fanout_agent.py  react_agent.py  reactmini_agent.py  reflection_agent.py  sub1_agent.py  sub2_agent.py  sync_agent.py
lang-graphic/: index.html  package.json  vite.config.ts
lang-graphic/src/: App.tsx  hooks.ts  layout.ts  types.ts
lang-graphic/src/components/: ControlPanel.tsx  CustomEdge.tsx  CustomNode.tsx  GraphCanvas.tsx
lang-graphic/src/hooks/: useExecutionState.ts  useGraphLayout.ts  useWebSocket.ts
lang-graphic/src/styles/: app.css  edges.css  nodes.css
lang-graphic/src/types/: graph.ts  protocol.ts
lang-graphic/src/utils/: layout.ts  ports.ts
langgraph_viz/: __init__.py  protocol.py  server.py  streamer.py
langgraphics/: __init__.py  broadcaster.py  extractor.py  formatter.py  protocol.py  server.py  streamer.py  topology.py  upstream.py  watch.py
langgraphics-web/: index.html  package.json  vite.config.ts
langgraphics-web/src/: hooks.ts  index.css  layout.ts  main.tsx  types.ts
langgraphics-web/src/components/: Controls.tsx  CustomEdge.tsx  CustomNode.tsx  GraphCanvas.tsx  InspectPanel.tsx  Metrics.tsx
langgraphics-web/src/hooks/: useFocus.ts  useGraphState.ts  useInspectTree.tsx  useWebSocket.ts
langgraphics/metadata/: .sync_time  models.json
scripts/: models.py
static/: index.html
static/_next/static/chunks/: 053490bb385f42f8.js  0a6c1e46e3f4e520.js  0b5d121bf74af70e.css  18cccc7f7f84be66.js  1b22004ae06bb502.js  3d556f87b1ac240b.js  3ee4417f85c30201.js  4c738a5a5a9a484d.js  4f30871dcb1d838f.css  627322285c9e946d.css  6294ecdb2987ea85.js  6c865d634f41384e.css  76169ccfbdea1940.js  7b9dde0c1107ca3d.js  a9b1187668e57e51.js  baaa7e136383fb33.js  c1bf04bb8679d28e.js  ce66107d1b6f7b50.js  d4f50e4343b2e810.js  df04a015a542b2be.js  e24a06782fa7faf7.js  e3a39f0964015e40.js  e4a340e3dda4bb22.js  f8cb48a15e75efe1.js  fbc2d1bb83bb3dc2.css  turbopack-cb00b40bfc721c90.js
tests/lib/: conftest.py  test_classify.py  test_formatter.py  test_topology.py  test_upstream.py  test_watching.py
tests/web/: depthMap.test.ts  global.d.ts  statuses.test.ts  tsconfig.json
