[project]
name = "langgraphics"
version = "0.1.0"
description = "Visualize live LangGraph execution and see how your agent thinks as it runs."
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Artyom Vancyan" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "websockets>=14.0",
]

[dependency-groups]
dev = [
    "langchain>=1.2.7",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "python-dotenv>=1.2.1",
    "ruff>=0.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["langgraphics/**/*"]

[tool.hatch.build.targets.wheel]
packages = ["langgraphics"]
