[project]
name = "langgraphics"
version = "0.1.0-beta"
description = "Visualize live LangGraph execution and see how your agent thinks as it runs."
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Artyom Vancyan" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "langchain-core>=1.0.0",
    "langgraph>=1.0.0",
    "websockets>=14.0",
]

[dependency-groups]
dev = [
    "langchain>=1.2.7",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "ruff>=0.15.0",
    "tox-uv>=1.29.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/lib"]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["langgraphics/**/*"]
ignore-vcs = true

[tool.hatch.build.targets.wheel]
packages = ["langgraphics"]
